Upgraded the AoC BOM (added Guava). Refactored Day1 to use Pair (javatuples) and Streams.zip to make it more functional. Changed Spreadsheet from class into record which provides equals method out of the box.